# cardiovision-pro

./: .dockerfile  .flake8  .gitignore  Dockerfile  Procfile  README.md  app.py  client.py  data_manager.py  ecg_metrics.json  plotter.py  pyproject.toml  railway.json  railway.txt  render.yaml  requirements.txt
src/: app.py  client.py  data_manager.py  main.py  metrics_calculator.py  signal_processor.py
src/converters/: bin_converter.py
src/database/: database.py  models.py  progress_crud.py
src/ecg_analysis/: api.py  config.py  data_manager.py  main.py  plotter.py
src/events/: api.py
src/metadata/: api.py  metadata.py
src/metrics/: api.py  metrics.py
src/modules/arritmiasDetector/: api.py  arritmiasDetector.py
src/modules/events/: api.py  events.py
src/modules/events/cases/: beat_classification.py  heart_rate.py  rr_intervals.py  (+1 more)
src/modules/frequenciesChart/: api.py  ecg_analyzer.py
src/modules/full_analysis/: api.py  full_analysis.py
src/modules/metrics/: api.py  metrics.py
src/modules/perturbations/: api.py  perturbations.py
src/modules/residual/: api.py  residual.py
src/modules/segmentation/: api.py  config.py  main.py  signal_processor.py
src/modules/segmentation_st/: api.py  segmentation_st.py
src/p_wave/: cardiopro_v2.py
src/perturbations/: api.py  perturbations.py
src/reportMetrics/: api.py  cardio-pro-418.ipynb  code-extraido.py  ecg_analyzer.py  metrics_service.py
src/residual/: api.py  residual.py
src/utils/: clearTempFiles.py  copyWfdb.py  getAvailableRecords.py  http_worker.py  saveTempFiles.py  xcmConverter.py
(+1 files in other folders)
